Changed letter spacing value from pixels to rem

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@
         margin-bottom: 1.5rem;
     }
     .qr-title {
-        font-family: 'Outfit';
+        font-family: 'Outfit', sans-serif;
         font-weight: var(--text-bold);
         color: var(--slate-900);
         text-align: center;
@@ -86,7 +86,7 @@
         color: var(--slate-500);
         text-align: center;
         line-height: 140%;
-        letter-spacing: 0.2px;
+        letter-spacing: 0.03rem;
         font-size: 1em;
     }
 }
